--- a/views/chats.handlebars
+++ b/views/chats.handlebars
@@ -1,7 +1,7 @@
 <h1>Chat</h1>
 
-<label for="autor">Autor</label><input id="inputAutor" name="autor" type="text" disabled>
-<label for="autor">Mensaje</label><input id="inputMensaje" name="mensaje" type="text">
+<label for="user">Usuario</label><input id="inputUser" name="user" type="text" disabled>
+<label for="message">Mensaje</label><input id="inputMessage" name="message" type="text">
 <button id="btnEnviar">enviar</button>
 
 <h3>Chat</h3>
