--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -1,5 +1,5 @@
 
-<h1 class=" p-3">Form para agregar mediante metodo POST a endpoint </h1>
+<h1 class=" p-3">Form para agregar nuevos productos </h1>
 <div class=" p-3 text-end">
     <form class="d-flex flex-wrap" id="formCargaProducto" action="/api/products" method="post">
         <div class="mb-3 d-flex w-50">
@@ -35,6 +35,72 @@
     </form>
 </div>
 
+
+{{#if hayResultados}}
+    <h1 > Productos existentes</h1>
+    <table class="table table-dark table-striped">
+    <thead>
+        <tr>
+        <th scope="col">Titulo</th>
+        <th scope="col">Precio</th>
+        <th scope="col">Descripcion</th>
+        <th scope="col">Id</th>
+        <th scope="col">Acciones</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each payload}}
+            <tr>    
+            <td>{{this.title}}</td>
+            <td>{{this.price}}</td>
+            <td>{{this.description}}</td>  
+            <td>{{this._id}}</td>
+            <td>
+                <label for="carrito">ID carrito</label>
+                <input type="text" id="cid{{this._id}}" name="carrito">
+
+                <label for="quantity">Cant:</label>
+                <input type="number" id="quantity{{this._id}}" name="quantity" min="1">
+                
+                <button onClick=agregarProductoAlCarrito("{{this._id}}") id={{this._id}} type="button" class="btn btn-success">
+                    Agregar a carrito
+                </button>
+                <button onClick=eliminarProducto("{{this._id}}") id={{this._id}} type="button" class="btn btn-danger">
+                    Eliminar ==== funciona, pero no actualiza el listado.. hace falta hacerla reactiva con sockets???
+                </button>
+            </td>
+            </tr>
+        {{/each}}
+    </tbody>
+    </table>
+
+    <div class="botoneraPaginado">
+        {{#if hasPrevPage}}
+        <a href="/api/views/products?limit={{limit}}&page={{prevPage}}" type="button" class="btn btn-outline-primary">
+            Pagina previa
+        </a>
+        {{else}}
+        <a type="button" class="btn btn-outline-secondary">
+            Pagina previa
+        </a>
+        {{/if}}
+        <div>
+            <p>{{limit}} productos por pagina, pagina actual: {{page}} , total de paginas: {{totalPages}}</p>
+        </div>
+        {{#if hasNextPage}}
+        <a href="/api/views/products?limit={{limit}}&page={{nextPage}}" type="button" class="btn btn-outline-primary">
+            Pagina Siguiente
+        </a>
+        {{else}}
+        <a type="button" class="btn btn-outline-secondary">
+            Pagina Siguiente
+        </a>
+        {{/if}}
+    </div>
+    {{else}}
+    <h1 > parece que no hay paginas</h1>
+{{/if}}
+
 <div class="p-3">
     <h1>Productos existentes</h1>
     <div id="productosRealTime">
@@ -44,3 +110,4 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/products.js"></script>
+
