separacion de codigo en distintos archivos, segun responsabilidades

--- a/views/cartById.handlebars
+++ b/views/cartById.handlebars
@@ -30,9 +30,9 @@
                         <td>{{this.product.description}}</td>
                         <td>{{this.quantity}}</td>
                         <td>{{this.product.price}}</td>
-                        <td>
+                        <td class="w-50">
                             <label for="quantity">Cant:</label>
-                            <input type="number" id="quantity{{this.product._id}}" name="quantity" min="1">
+                            <input type="number" id="quantity{{this.product._id}}" name="quantity" min="1" value="{{this.quantity}}" >
                             <button onClick=elegirUnidadesDesdeCartById("{{this.product._id}}") type="button" class="btn btn-success">
                                 Elegir Cantidad
                             </button>
