--- a/views/productsForAdmin.handlebars
+++ b/views/productsForAdmin.handlebars
@@ -1,6 +1,6 @@
 {{#if loguedUser}}
 <div class=" d-flex flex-wrap border border-success rounded p-4 m-4 justify-content-around">
-    <h5 class="w-100">USUARIO LOGUEADO</h5>
+    <h5 class="w-100">ADMIN</h5>
     <p class="pe-5 w-25">Nombre: {{user.first_name}}</p>
     <p class="pe-5 w-25">Apellido: {{user.last_name}}</p> 
     <p class="pe-5 w-25">Email: {{user.email}}</p>
@@ -9,17 +9,11 @@
     <form id="formLogOut" class=" w-50">
         <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
     </form>
-</div>
-
-{{else}}
-    <div class=" d-flex flex-wrap border border-success p-2 m-4 justify-content-around">
-        <h5>NO HAY USUARIO LOGUEADO AUN..</h5>
-        <button type="submit" class="btn btn-primary"  onClick=goToLogin()>¿Quieres loguearte?</button>
-    </div>  
+</div> 
 {{/if}}
 
 {{#if hayResultados}}
-    <h4> Productos existentes</h4>
+    <h4>Edicion de productos</h4>
     <table class="table table-dark table-striped">
     <thead>
         <tr>
@@ -39,12 +33,13 @@
             <td>{{this._id}}</td>
             <td>
                 <div class="d-flex flex-wrap">
-                    <label for="quantity" class="w-50">Cant:</label>
-                    <input type="number" id="quantity{{this._id}}" name="quantity" min="1" class="w-50">
-                    <label for="carrito" class="w-50">ID carrito</label>
-                    <input type="text" id="cid{{this._id}}" name="carrito" class="w-50">
-                    <button onClick=agregarProductoAlCarrito("{{this._id}}") id={{this._id}} type="button" class="btn btn-success w-100 my-1 ">
-                        Agregar a carrito por ID
+                    <button onClick=editProduct("{{this._id}}") type="button" class="btn btn-outline-warning w-100 m-1">
+                        Editar (PENDIENTE)
+                    </button>
+                </div>
+                <div class="d-flex flex-wrap">
+                    <button onClick=eliminarProducto("{{this._id}}") id={{this._id}} type="button" class="btn btn-outline-danger w-100 m-1">
+                        Eliminar
                     </button>
                 </div>
             </td>
@@ -79,7 +74,6 @@
     {{else}}
     <h1 > parece que no hay paginas</h1>
 {{/if}}
-
 
 <script src="/js/products.js"></script>
 <script src="/js/formLogOut.js"></script>
