--- a/views/productsSocket.handlebars
+++ b/views/productsSocket.handlebars
@@ -39,12 +39,17 @@
             <td>{{this._id}}</td>
             <td>
                 <div class="d-flex flex-wrap">
-                    <label for="quantity" class="w-50">Cant:</label>
-                    <input type="number" id="quantity{{this._id}}" name="quantity" min="1" class="w-50">
-                    <label for="carrito" class="w-50">ID carrito</label>
-                    <input type="text" id="cid{{this._id}}" name="carrito" class="w-50">
-                    <button onClick=agregarProductoAlCarrito("{{this._id}}") id={{this._id}} type="button" class="btn btn-success w-100 my-1 ">
-                        Agregar a carrito por ID
+                    <div>
+                        <label for="quantity" class="w-50">Cant:</label>
+                        <input type="number" id="quantity{{this._id}}" name="quantity" min="1" class="w-25">
+                        <label for="carrito" class="w-25">ID carrito</label>
+                        <input type="text" id="cid{{this._id}}" name="carrito" class="w-50">
+                        <button onClick=agregarProductoAlCarrito("{{this._id}}") id={{this._id}} type="button" class="btn btn-success w-100 my-1 ">
+                            Agregar a carrito por ID
+                        </button>
+                    </div>
+                    <button onClick=eliminarProducto("{{this._id}}") id={{this._id}} type="button" class="btn btn-danger w-100 ">
+                        Eliminar PRODUCTO
                     </button>
                 </div>
             </td>
@@ -80,7 +85,15 @@
     <h1 > parece que no hay paginas</h1>
 {{/if}}
 
+<div class="p-3">
+    <h1>Productos existentes</h1>
+    <div id="productosRealTime">
+        
+     </div>
+</div>
 
+<script src="/socket.io/socket.io.js"></script>
+<script src="/js/productsSocket.js"></script>
 <script src="/js/products.js"></script>
 <script src="/js/formLogOut.js"></script>
 
