--- a/views/carts.handlebars
+++ b/views/carts.handlebars
@@ -1,5 +1,5 @@
 
-<div class="p-3">
+<div class="p-3 w-100">
     
     <h1 class="text-center"> Carritos</h1> 
     <button class="btn btn-primary m-3" onclick="createNewCart()">Crear nuevo carrito</button>
