--- a/views/userRegister.handlebars
+++ b/views/userRegister.handlebars
@@ -17,5 +17,10 @@
     <input id="input_password" type="password" placeholder="input_password" class="w-50 mt-2">
     <button type="submit" class="btn btn-success w-50 mt-4"> Registrarme! </button>  
 </form>
+ <div>
+    <a href="/api/users/session/github">
+        <button  class="btn btn-outline-dark  mt-4" onClick=singInGithub()>¡ Ingresar con GITHUB! </button>
+    </a>    
+ </div>
 
 <script src="/js/userRegister.js"> </script>
