limpieza de codigo

--- a/views/userRegister.handlebars
+++ b/views/userRegister.handlebars
@@ -19,7 +19,7 @@
 </form>
  <div>
     <a href="/api/users/session/github">
-        <button  class="btn btn-outline-dark  mt-4" onClick=singInGithub()>¡ Ingresar con GITHUB! </button>
+        <button  class="btn btn-outline-dark  mt-4">¡ Ingresar con GITHUB! </button>
     </a>    
  </div>
 
