--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -18,7 +18,7 @@
     </div>  
     <div>
         <a href="/api/users/session/github">
-            <button  class="btn btn-outline-dark  mt-4" onClick=singInGithub()>¡ Ingresar con GITHUB! </button>
+            <button  class="btn btn-outline-dark  mt-4">¡ Ingresar con GITHUB! </button>
         </a>    
     </div>
 {{/if}}
