agregado de ruta api/session/current/, agregado de rutas solo para autenticados, y agregado de sessiones por signed cookies, github

--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -5,7 +5,7 @@
     <p class="pe-5 w-25">Apellido: {{user.last_name}}</p> 
     <p class="pe-5 w-25">Email: {{user.email}}</p>
     <p class="pe-5 w-25">Edad: {{user.age}}</p>       
-    <p class="pe-5 w-50">Rol de usuario : {{user.rol}}</p>    
+    <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
     <form id="formLogOut" class=" w-50">
         <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
     </form>
@@ -85,5 +85,6 @@
 
 
 <script src="/js/products.js"></script>
+<script src="/js/userLogin.js"> </script>
 <script src="/js/formLogOut.js"></script>
 
