--- a/views/cartById.handlebars
+++ b/views/cartById.handlebars
@@ -1,6 +1,19 @@
 
 <div class="p-3">    
     <h1 class="text-center"> Carrito por ID</h1> 
+    {{#if loguedUser}}
+        <div class=" d-flex flex-wrap border border-success rounded p-4 m-4 justify-content-around">
+            <h5 class="w-100">USUARIO LOGUEADO</h5>
+            <p class="pe-5 w-25">Nombre: {{user.first_name}}</p>
+            <p class="pe-5 w-25">Apellido: {{user.last_name}}</p> 
+            <p class="pe-5 w-25">Email: {{user.email}}</p>
+            <p class="pe-5 w-25">Edad: {{user.age}}</p>       
+            <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
+            <form id="formLogOut" class=" w-50">
+                <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
+            </form>
+        </div>
+    {{/if}}
     {{#if hayResultados}}
     
     <table class="table table-dark table-striped text-center" id="{{cart._id}}">
@@ -66,4 +79,6 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/carts.js"></script>
+<script src="/js/userLogin.js"> </script>
+<script src="/js/formLogOut.js"></script>
 
