--- a/views/productsSocket.handlebars
+++ b/views/productsSocket.handlebars
@@ -5,7 +5,7 @@
     <p class="pe-5 w-25">Apellido: {{user.last_name}}</p> 
     <p class="pe-5 w-25">Email: {{user.email}}</p>
     <p class="pe-5 w-25">Edad: {{user.age}}</p>       
-    <p class="pe-5 w-50">Rol de usuario : {{user.rol}}</p>    
+    <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
     <form id="formLogOut" class=" w-50">
         <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
     </form>
@@ -95,5 +95,6 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/productsSocket.js"></script>
 <script src="/js/products.js"></script>
+<script src="/js/userLogin.js"> </script>
 <script src="/js/formLogOut.js"></script>
 
