--- a/views/currentUser.handlebars
+++ b/views/currentUser.handlebars
@@ -5,11 +5,72 @@
     <p class="pe-5 w-25">Apellido: {{user.last_name}}</p> 
     <p class="pe-5 w-25">Email: {{user.email}}</p>
     <p class="pe-5 w-25">Edad: {{user.age}}</p>       
-    <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
+    <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>
+    <p class="pe-5 w-50">ID carrito: {{user.cart}}</p>        
     <form id="formLogOut" class=" w-50">
         <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
     </form>
 </div>
+    {{#if products}}
+        <table class="table table-dark table-striped text-center" id="{{user.cart}}">
+        <thead>
+            <tr>
+                <th scope="col">Productos en carrito</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{#each products}}
+                <tr  id="{{this.product._id}}"> 
+                <td>
+                    <table class="table table-dark table-striped">
+                        <thead>
+                            <tr>
+                                <th scope="col">ID Producto</th>
+                                <th scope="col">Nombre</th>
+                                <th scope="col" class="w-25">Descripcion</th>
+                                <th scope="col">Cantidad</th>
+                                <th scope="col">Precio Un</th>
+                                <th scope="col" >Acciones de Producto</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <td>{{this.product._id}}</td>
+                            <td>{{this.product.title}}</td>
+                            <td>{{this.product.description}}</td>
+                            <td>{{this.quantity}}</td>
+                            <td>{{this.product.price}}</td>
+                            <td class="w-50">
+                                <label for="quantity">Cant:</label>
+                                <input type="number" id="quantity{{this.product._id}}" name="quantity" min="1" value="{{this.quantity}}" >
+                                <button onClick=elegirUnidadesDesdeCartById("{{this.product._id}}") type="button" class="btn btn-success">
+                                    Elegir Cantidad
+                                </button>
+                                <button onClick=eliminarProductosDesdeCartById("{{this.product._id}}") type="button" class="btn btn-danger">
+                                    Eliminar producto
+                                </button>
+                            </td>
+                        </tbody>
+                    </table>
+                </td>
+                </tr>
+            {{/each}}
+                <td>
+                    <button  onClick=vaciarCarrito("{{this._id}}") type="button" class="btn btn-warning w-25 m-1">
+                        Vaciar el carrito
+                    </button>
+                    <button onClick=eliminarCarrito("{{this._id}}") type="button" class="btn btn-danger w-25 m-1">
+                        Eliminar el carrito
+                    </button>
+                </td>
+        </tbody>
+        </table>
+    {{else}} 
+        <div class="m-5 p-5 border border-dark">
+            <h3 class="w-100 text-center ">El usuario aun no agrego nada al carrito..</h3>
+            <button class="btn btn-outline-success  mt-4" onClick=goToProducts()> ¿Quieres ver productos? </button> 
+        </div>        
+    {{/if}}
+
 {{else}}
  <div class="m-5 p-5 border border-dark">
     <h3 class="w-100 text-center ">NO HAY USUARIO LOGUEADO AUN</h3>
@@ -30,12 +91,10 @@
         <button  class="btn btn-outline-dark  mt-4">¡ Ingresar con GITHUB! </button>
     </a>    
  </div>
-
-
-
 {{/if}}
 
 
 
+<script src="/js/carts.js"></script>
 <script src="/js/userLogin.js"> </script>
 <script src="/js/formLogOut.js"></script>
