--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,10 +8,14 @@
     <p class="pe-5 w-25">Apellido: {{user.last_name}}</p> 
     <p class="pe-5 w-25">Email: {{user.email}}</p>
     <p class="pe-5 w-25">Edad: {{user.age}}</p>       
-    <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
-    <form id="formLogOut" class=" w-50">
-        <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
-    </form>
+    <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>
+    <p class="pe-5 w-50">ID carrito: {{user.cart}}</p>        
+        <div class="container  w-50 d-flex">
+            <button class="btn btn-outline-primary w-50 me-2" onclick="goToUserProfile()">Ver perfil</button>
+            <form id="formLogOut" class="w-50">
+                <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
+            </form>
+        </div>
 </div>
 {{else}}
 <h5 class="text-center mt-5">FORMULARIO DE LOGIN</h5>
