--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -6,9 +6,13 @@
     <p class="pe-5 w-25">Email: {{user.email}}</p>
     <p class="pe-5 w-25">Edad: {{user.age}}</p>       
     <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
-    <form id="formLogOut" class=" w-50">
-        <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
-    </form>
+    <p class="pe-5 w-50">ID carrito: <span id="cidUser">{{user.cart}}</span> </p>    
+    <div class="container  w-50 d-flex">
+        <button class="btn btn-outline-primary w-50 me-2" onclick="goToUserProfile()">Ver perfil</button>
+        <form id="formLogOut" class="w-50">
+            <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
+        </form>
+    </div>
 </div>
 
 {{else}}
@@ -45,9 +49,9 @@
                     <label for="quantity" class="w-50">Cant:</label>
                     <input type="number" id="quantity{{this._id}}" name="quantity" min="1" class="w-50">
                     <label for="carrito" class="w-50">ID carrito</label>
-                    <input type="text" id="cid{{this._id}}" name="carrito" class="w-50">
-                    <button onClick=agregarProductoAlCarrito("{{this._id}}") id={{this._id}} type="button" class="btn btn-success w-100 my-1 ">
-                        Agregar a carrito por ID
+                    <input type="text" id="cid{{this._id}}" name="carrito" class="w-50">                    
+                    <button onClick=agregarProductoAlCarritoUsuario("{{this._id}}") id={{this._id}} type="button" class="btn btn-success w-100 my-1 ">
+                        Agregar a carrito DEL USUARIO
                     </button>
                 </div>
             </td>
