--- a/views/currentUser.handlebars
+++ b/views/currentUser.handlebars
@@ -12,7 +12,7 @@
     </form>
 </div>
     {{#if products}}
-        <table class="table table-dark table-striped text-center" id="{{user.cart}}">
+        <table class="table table-striped text-center" id="{{user.cart}}">
         <button class="btn btn-outline-success  mt-4" onClick=goToProducts()> ¿Quieres ver mas productos? </button> 
         <thead>
             <tr>
@@ -23,7 +23,7 @@
             {{#each products}}
                 <tr  id="{{this.product._id}}"> 
                 <td>
-                    <table class="table table-dark table-striped">
+                    <table class="table  table-striped">
                         <thead>
                             <tr>
                                 <th scope="col">ID Producto</th>
