punto de seguridad modificacion para patron repository

--- a/views/currentUser.handlebars
+++ b/views/currentUser.handlebars
@@ -59,6 +59,9 @@
                     <button  onClick=vaciarCarritoUsuario() type="button" class="btn btn-warning w-25 m-1">
                         Vaciar el carrito
                     </button>
+                    <button onClick=comprarCarrito() type="button" class="btn btn-success w-25 m-1">
+                        PAGAR
+                    </button>
                 </td>
         </tbody>
         </table>
