agregado de envio de funcionalidad para envio de email para restaurar constraseña de usuarios

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -31,7 +31,10 @@
     <button class="btn btn-outline-success  mt-4" onClick=goToRegister()>¡ Quiero registrarme! </button> 
     <a href="/api/users/session/github">
         <button  class="btn btn-outline-dark  mt-4" >¡ Ingresar con GITHUB! </button>
-    </a>   
+    </a>  
+    <div>
+        <button class="btn btn-outline-dark  mt-4" onClick=goToRestorePassword()>Olvide mi contraseña...</button> 
+    </div> 
  </div>
 {{/if}}
 
