--- a/views/userLogin.handlebars
+++ b/views/userLogin.handlebars
@@ -13,4 +13,7 @@
         <button  class="btn btn-outline-dark  mt-4">¡ Ingresar con GITHUB! </button>
     </a>    
  </div>
+  <div>
+    <button class="btn btn-outline-dark  mt-4" onClick=goToRestorePassword()>Olvide mi contraseña...</button> 
+ </div>
 <script src="/js/userLogin.js"> </script>
