modificacion de manejo de alertas en front

--- a/views/create-new-password.handlebars
+++ b/views/create-new-password.handlebars
@@ -1,6 +1,19 @@
 <h5 class="text-center mt-5">Ingresa tu nuevo password</h5>
-<form id="formNewPassword" action="" class="p-4 m-4 border border-success rounded d-flex flex-wrap justify-content-around">
 
+{{#if error}}
+<div>
+    <h3>Parece que hubo un error, intenta nuevamente</h3>
+</div>
+{{/if}}
+
+<form id="formNewPassword" action="" class="p-4 m-4 border border-success rounded d-flex flex-wrap justify-content-around">
+    <div>
+        <p>Ten en cuenta las siguientes recomendaciones..</p>
+        <ul>
+            <li> NO puedes usar la contraseña actual </li>
+            <li> DEBE tener al menos 5 caracteres </li>
+        </ul>
+    </div>
     <label for="input_password"class="w-50 mt-2">Password</label>
     <input id="input_password" type="password" placeholder="input_password"class="w-50 mt-2">
     <input id="input_email" type="email" placeholder="input_email" hidden value={{email}}>
