--- a/views/restore-password.handlebars
+++ b/views/restore-password.handlebars
@@ -1,4 +1,10 @@
 
+{{#if error}}
+<div>
+    <h3>Parece que hubo un error, intenta creando nuevamente el token</h3>
+</div>
+{{/if}}
+
 <form id="formResetPassword" action="" class="p-4 m-4 border border-success rounded d-flex flex-wrap justify-content-around">
     <p>Ingresa tu email para poder continuar</p>
 
