agregado de campo owner de productos y funcionalidad para usuarios premium

--- a/views/formularioProductos.handlebars
+++ b/views/formularioProductos.handlebars
@@ -46,6 +46,7 @@
             <label for="thumbnails" class="form-label p-1 ">Thumbnails</label>
             <input type="text" class="form-control" id="thumbnails" name="thumbnails" aria-describedby="thumbnails">
         </div>     
+         <input type="text" class="form-control " id="owner" name="owner" aria-describedby="owner" hidden value={{user.email}}>
         <button type="submit" class="btn btn-primary w-50 mt-3">Enviar</button>
     </form>
 </div>
