--- a/views/productsForAdmin.handlebars
+++ b/views/productsForAdmin.handlebars
@@ -24,6 +24,7 @@
         <th scope="col">Precio</th>
         <th scope="col">Descripcion</th>
         <th scope="col">Id</th>
+        <th scope="col">Owner</th>
         <th scope="col">Acciones</th>
         </tr>
     </thead>
@@ -34,6 +35,7 @@
             <td>{{this.price}}</td>
             <td>{{this.description}}</td>  
             <td>{{this._id}}</td>
+            <td>{{this.owner}}</td>
             <td>
                 <div class="d-flex flex-wrap">
                     <button onClick=editProduct("{{this._id}}") type="button" class="btn btn-outline-warning w-100 m-1">
