--- a/views/borrar/products.handlebars
+++ b/views/borrar/products.handlebars
@@ -1,22 +1,32 @@
 {{#if loguedUser}}
 <div class=" d-flex flex-wrap border border-success rounded p-4 m-4 justify-content-around">
-    <h5 class="w-100">ADMIN</h5>
+    <h5 class="w-100">USUARIO LOGUEADO</h5>
     <p class="pe-5 w-25">Nombre: {{user.first_name}}</p>
     <p class="pe-5 w-25">Apellido: {{user.last_name}}</p> 
     <p class="pe-5 w-25">Email: {{user.email}}</p>
     <p class="pe-5 w-25">Edad: {{user.age}}</p>       
     <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
+    <p class="pe-5 w-50">ID carrito: <span id="cidUser">{{user.cart}}</span> </p>    
     <div class="container  w-50 d-flex">
         <button class="btn btn-outline-primary w-50 me-2" onclick="goToUserProfile()">Ver perfil</button>
         <form id="formLogOut" class="w-50">
             <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
         </form>
     </div>
-</div> 
+</div>
+
+{{else}}
+    <div class=" d-flex flex-wrap border border-success p-2 m-4 justify-content-around">
+        <h5>NO HAY USUARIO LOGUEADO AUN..</h5>
+        <button type="submit" class="btn btn-primary"  onClick=goToLogin()>¿Quieres loguearte?</button>
+        <a href="/api/users/session/github">
+            <button  class="btn btn-outline-dark  mt-4">¡ Ingresar con GITHUB! </button>
+        </a>    
+    </div>  
 {{/if}}
 
-{{#if hayResultados}}
-    <h4>Edicion de productos</h4>
+{{#if paginatedProducts.payload}}
+    <h4> Productos existentes</h4>
     <table class="table table-dark table-striped">
     <thead>
         <tr>
@@ -24,29 +34,30 @@
         <th scope="col">Precio</th>
         <th scope="col">Descripcion</th>
         <th scope="col">Id</th>
-        <th scope="col">Owner</th>
         <th scope="col">Acciones</th>
         </tr>
     </thead>
     <tbody>
-        {{#each payload}}
+        {{#each paginatedProducts.payload}}
             <tr>    
             <td>{{this.title}}</td>
             <td>{{this.price}}</td>
             <td>{{this.description}}</td>  
             <td>{{this._id}}</td>
-            <td>{{this.owner}}</td>
             <td>
-                <div class="d-flex flex-wrap">
-                    <button onClick=editProduct("{{this._id}}") type="button" class="btn btn-outline-warning w-100 m-1">
-                        Editar (PENDIENTE)
+                <div>
+                    <p>Disp.</p>
+                    <span>{{this.stock}}</span>
+                </div>
+
+                <div class="d-flex ">
+                    <label for="quantity" class="me-5">Cant:</label>
+                    <input type="number" id="quantity{{this._id}}" name="quantity" min="1" class="me-5" max={{this.stock}}>                    
+                    <button onClick=agregarProductoAlCarritoUsuario("{{this._id}}") id={{this._id}} type="button" class="btn btn-success w-100 my-1 ">
+                        Agregar a carrito DEL USUARIO
                     </button>
                 </div>
-                <div class="d-flex flex-wrap">
-                    <button onClick=eliminarProducto("{{this._id}}") id={{this._id}} type="button" class="btn btn-outline-danger w-100 m-1">
-                        Eliminar
-                    </button>
-                </div>
+                
             </td>
             </tr>
         {{/each}}
@@ -54,8 +65,8 @@
     </table>
 
     <div class="botoneraPaginado">
-        {{#if hasPrevPage}}
-        <a href="/api/views/products?limit={{limit}}&page={{prevPage}}" type="button" class="btn btn-outline-primary">
+        {{#if paginatedProducts.hasPrevPage}}
+        <a href="/api/views/products?limit={{paginatedProducts.limit}}&page={{paginatedProducts.prevPage}}" type="button" class="btn btn-outline-primary">
             Pagina previa
         </a>
         {{else}}
@@ -64,10 +75,10 @@
         </a>
         {{/if}}
         <div>
-            <p>{{limit}} productos por pagina, pagina actual: {{page}} , total de paginas: {{totalPages}}</p>
+            <p>{{paginatedProducts.limit}} productos por pagina, pagina actual: {{paginatedProducts.page}} , total de paginas: {{paginatedProducts.totalPages}}</p>
         </div>
-        {{#if hasNextPage}}
-        <a href="/api/views/products?limit={{limit}}&page={{nextPage}}" type="button" class="btn btn-outline-primary">
+        {{#if paginatedProducts.hasNextPage}}
+        <a href="/api/views/products?limit={{paginatedProducts.limit}}&page={{paginatedProducts.nextPage}}" type="button" class="btn btn-outline-primary">
             Pagina Siguiente
         </a>
         {{else}}
@@ -79,6 +90,7 @@
     {{else}}
     <h1 > parece que no hay paginas</h1>
 {{/if}}
+
 
 <script src="/js/products.js"></script>
 <script src="/js/userLogin.js"> </script>
