--- a/views/productsSocket.handlebars
+++ b/views/productsSocket.handlebars
@@ -11,6 +11,7 @@
         <form id="formLogOut" class="w-50">
             <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
         </form>
+        <button class="btn btn-outline-primary  m-2 w-50" onClick=goToHome()> Home </button>
     </div>
 </div>
 
