--- a/views/userRegister.handlebars
+++ b/views/userRegister.handlebars
@@ -22,5 +22,6 @@
         <button  class="btn btn-outline-dark  mt-4">¡ Ingresar con GITHUB! </button>
     </a>    
  </div>
+ <button class="btn btn-outline-primary  m-2 w-50" onClick=goToHome()> Home </button>
 
 <script src="/js/userRegister.js"> </script>
