Modificacion de manejo error de jwt expired

--- a/views/productsView.handlebars
+++ b/views/productsView.handlebars
@@ -7,14 +7,13 @@
     <p class="pe-5 w-25">Edad: {{user.age}}</p>       
     <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
     <p class="pe-5 w-50">ID carrito: <span id="cidUser">{{user.cart}}</span> </p>    
-    <div class="container  w-50 d-flex">
-        <button class="btn btn-outline-primary w-50 me-2" onclick="goToUserProfile()">Ver perfil</button>
+    <div class="container  w-50 d-flex  align-items-center justify-content-around ">
+        <button class="btn btn-outline-success w-50 me-2" onclick="goToUserProfile()">Ver perfil</button>
         <form id="formLogOut" class="w-50">
             <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
         </form>
         <button class="btn btn-outline-primary  m-2 w-50" onClick=goToHome()> Home </button>
     </div>
-    <button class="btn btn-outline-primary  m-2 w-50" onClick=goToHome()> Home </button>
 </div> 
 {{/if}}
 
