modificacion de funcionamiento de cart service, para trasladar logica desde repositorio a servicio

--- a/views/purchase.handlebars
+++ b/views/purchase.handlebars
@@ -56,7 +56,7 @@
 <div class=" border border-success rounded p-4 m-4 ">
     <ul class="list-group list-group-horizontal">
       <li class="list-group-item">Precio productos comprados</li>
-      <li class="list-group-item">{{amount}}</li>
+      <li class="list-group-item">${{amount}}</li>
     </ul>
     <ul class="list-group list-group-horizontal-sm">
       <li class="list-group-item">Comprador</li>
