detalles esteticos en boots en rutas para modificar usuarios premiums

--- a/views/currentUser.handlebars
+++ b/views/currentUser.handlebars
@@ -11,6 +11,7 @@
         <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
     </form>
     <button class="btn btn-outline-primary  m-2 w-50" onClick=goToHome()> Home </button>
+    <button class="btn btn-outline-warning  m-2 w-50" onClick=goToMembershipsList()> Ver usuarios </button>
 </div>
 {{#if user.addProductsAllowed}}
 <div class=" border border-primary rounded p-4 m-4  d-flex  flex-wrap align-items-center justify-content-around">
