modificacion detalle service de cart

--- a/views/formularioProductos.handlebars
+++ b/views/formularioProductos.handlebars
@@ -33,7 +33,7 @@
 
         <div class="mb-3 d-flex w-25">
             <label for="price" class="form-label p-1 w-10">Precio</label>
-            <input type="number" class="form-control " id="price" name="price"  aria-describedby="price">
+            <input type="number" class="form-control " id="price" name="price"  aria-describedby="price" min="0">
         </div>
         <div class="mb-3 d-flex w-50">
             <label for="category" class="form-label p-1 w-15">Categoria</label>
@@ -41,7 +41,7 @@
         </div> 
         <div class="mb-3 d-flex w-25">
             <label for="stock" class="form-label p-1 w-10">Stock</label>
-            <input type="number" class="form-control " id="stock" name="stock" aria-describedby="stock">
+            <input type="number" class="form-control " id="stock" name="stock" aria-describedby="stock" min="1">
         </div>
         <div class="mb-3 d-flex w-100">
             <label for="thumbnails" class="form-label p-1 ">Thumbnails</label>
